frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: igeolise/k8s-task-backend:1.0.0
          name: frontendApp
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontendService
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: frontend
